// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@mqs/react-server-components components <Button /> renders 1`] = `
<DocumentFragment>
  <button
    class="btn btn-md test"
    data-testid="Button"
    type="button"
  >
    children...
  </button>
</DocumentFragment>
`;

exports[`Storyshots @mqs/react-server-components/components/Button Button Color Example 1`] = `
[
  <button
    className="btn btn-accent btn-md"
    data-testid="Button"
    disabled={false}
    type="button"
  >
    accent
  </button>,
  <button
    className="btn btn-error btn-md"
    data-testid="Button"
    disabled={false}
    type="button"
  >
    error
  </button>,
  <button
    className="btn btn-ghost btn-md"
    data-testid="Button"
    disabled={false}
    type="button"
  >
    ghost
  </button>,
  <button
    className="btn glass btn-md"
    data-testid="Button"
    disabled={false}
    type="button"
  >
    glass
  </button>,
  <button
    className="btn btn-info btn-md"
    data-testid="Button"
    disabled={false}
    type="button"
  >
    info
  </button>,
  <button
    className="btn btn-link btn-md"
    data-testid="Button"
    disabled={false}
    type="button"
  >
    link
  </button>,
  <button
    className="btn btn-neutral btn-md"
    data-testid="Button"
    disabled={false}
    type="button"
  >
    neutral
  </button>,
  <button
    className="btn btn-primary btn-md"
    data-testid="Button"
    disabled={false}
    type="button"
  >
    primary
  </button>,
  <button
    className="btn btn-secondary btn-md"
    data-testid="Button"
    disabled={false}
    type="button"
  >
    secondary
  </button>,
  <button
    className="btn btn-success btn-md"
    data-testid="Button"
    disabled={false}
    type="button"
  >
    success
  </button>,
  <button
    className="btn btn-warning btn-md"
    data-testid="Button"
    disabled={false}
    type="button"
  >
    warning
  </button>,
]
`;

exports[`Storyshots @mqs/react-server-components/components/Button Button Example 1`] = `
<button
  className="btn btn-md"
  data-testid="Button"
  disabled={false}
  type="button"
>
  Click Me!
</button>
`;

exports[`Storyshots @mqs/react-server-components/components/Button Button Loading Example 1`] = `
<button
  className="btn loading btn-md"
  data-testid="Button"
  disabled={false}
  type="button"
>
  Loading
</button>
`;

exports[`Storyshots @mqs/react-server-components/components/Button Button No Animation Example 1`] = `
<button
  className="btn no-animation btn-md"
  data-testid="Button"
  disabled={false}
  type="button"
>
  No Animation
</button>
`;

exports[`Storyshots @mqs/react-server-components/components/Button Button Shape Example 1`] = `
[
  <button
    className="btn btn-circle btn-md"
    data-testid="Button"
    disabled={false}
    type="button"
  >
    c
  </button>,
  <button
    className="btn btn-square btn-md"
    data-testid="Button"
    disabled={false}
    type="button"
  >
    s
  </button>,
]
`;

exports[`Storyshots @mqs/react-server-components/components/Button Button Size Example 1`] = `
[
  <button
    className="btn btn-lg"
    data-testid="Button"
    disabled={false}
    type="button"
  >
    lg
  </button>,
  <button
    className="btn btn-md"
    data-testid="Button"
    disabled={false}
    type="button"
  >
    md
  </button>,
  <button
    className="btn btn-sm"
    data-testid="Button"
    disabled={false}
    type="button"
  >
    sm
  </button>,
  <button
    className="btn btn-xs"
    data-testid="Button"
    disabled={false}
    type="button"
  >
    xs
  </button>,
]
`;

exports[`Storyshots @mqs/react-server-components/components/Button Button Wide Example 1`] = `
<button
  className="btn btn-wide btn-md"
  data-testid="Button"
  disabled={false}
  type="button"
>
  Wide
</button>
`;
